# tracedata-ai-monorepo

./: .env.example  .gitignore  README.md  docker-compose.yml  findings.md  progress.md  pyproject.toml  run-ci.ps1  task_plan.md
ai-agents/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
ai-agents/app/: database.py  main.py
ai-agents/app/agents/: shell_pipe.py
ai-agents/app/core/: celery_app.py  logging.py
ai-agents/app/models/: entities.py
ai-agents/app/schemas/: entities.py
ai-agents/app/services/: kafka_consumer.py  tasks.py
ai-agents/scripts/: seed_data.json  seed_data.py  truck_simulator.py
ai-agents/tests/: test_smoke.py
backend/: .coverage  .coverage.ci.164  .coverage.ci.31160  .coverage.ci.36280  .dockerignore  .env.example  .gitignore  .tmp-ci-requirements.txt  Dockerfile  Dockerfile.api  Dockerfile.backend  Dockerfile.local  celery_app.py  check_redis.py  entrypoint.sh  logging.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  reset_and_test.py  smoke_test.py
backend/agents/: __init__.py  base.py  examples.py  feedback.py  orchestrator.py  worker.py
backend/agents/base/: README.md  agent.py  agent_llm.py  langgraph_runner.py  logger.py
backend/agents/driver_support/: README.md  __init__.py  agent.py  prompts.py  tasks.py  tools.py
backend/agents/examples/: __init__.py  demo_poc.py  weather_traffic_agent.py
backend/agents/orchestrator/: README.md  __init__.py  agent.py  coaching_followup.py  db_manager.py  feedback_followup.py  health_monitor.py  prompts.py  sentiment_followup.py  tools.py
backend/agents/safety/: README.md  __init__.py  agent.py  prompts.py  tasks.py  tools.py
backend/agents/scoring/: README.md  __init__.py  agent.py  features.py  prompts.py  tasks.py  tools.py
backend/agents/sentiment/: README.md  __init__.py  agent.py  analysis.py  graph.py  tasks.py
backend/agents/tools/: __init__.py  weather_traffic.py
backend/api/: main.py
backend/api/api/: __init__.py  deps.py
backend/api/models/: __init__.py  base.py  driver.py  fleet.py  issue.py  maintenance.py  route.py  tenant.py  trip.py
backend/api/routes/: README.md
backend/api/schemas/: driver.py  fleet.py  issue.py  maintenance.py  route.py  tenant.py  trip.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  celery_app.py  config.py  database.py  logging.py  middleware.py
backend/app/db/: base.py
backend/app/models/: __init__.py  alert.py  audit_log.py  base.py  driver.py  fleet.py  issue.py  maintenance.py  route.py  telemetry.py  tenant.py  trip.py  vehicle.py
backend/app/schemas/: __init__.py  driver.py  entities.py  fleet.py  maintenance.py  tenant.py  trip.py
backend/app/tasks/: behavior.py
backend/common/: celery_async.py
backend/common/agent_flow/: __init__.py  service.py
backend/common/cache/: __init__.py  reader.py
backend/common/config/: README.md  events.py  execution_workflow.py  settings.py  system_prompts.py
backend/common/db/: README.md  cross_domain.py  database_permissions.py  engine.py  ownership.py  schema_repository.py  write_validation.py
backend/common/embeddings/: __init__.py  client.py  openai.py
backend/common/integrations/: slack_notifier.py
backend/common/llm/: __init__.py  adapter.py  anthropic_adapter.py  factory.py  models.py  openai_adapter.py
backend/common/models/: README.md  agent_flow.py  coaching.py  emergency.py  enums.py  events.py  orm.py  sa_base.py  scoring.py  scoring_orm.py  security.py  trips.py
backend/common/redis/: README.md  client.py  keys.py
backend/common/samples/: __init__.py  smoothness_batch.py
backend/common/tools/: README.md
backend/common/workflow_fixtures/: __init__.py  builders.py  minimal_trip.py  mock_driver_feedback.py  multi_truck_scoring_seed.py  safety_collision_trip.py  scoring_harsh_long_trip.py  sg_baseline_trip.py  sg_harsh_locations.py
backend/core/: __init__.py  celery_app.py  config.py  database.py  logging.py
backend/core/buffer/: ring_buffer.py
backend/core/ingestion/: README.md  db.py  injection.py  sidecar.py  transformer.py  worker.py
backend/docs/: workflow_testing.md
backend/domains/driver_evaluation/: models.py  router.py  schemas.py  tasks.py
backend/domains/driver_wellness/: models.py  router.py  schemas.py  tasks.py
backend/domains/orchestration/: router.py  state_machine.py
backend/domains/telemetry_safety/: models.py  router.py  schemas.py
backend/logs/: .gitkeep
backend/scripts/: README.md  __init__.py  agent_schemas.sql  bootstrap_e2e.sql  bootstrap_sg_baseline.py  clean_datastores.py  docker_verify_flow.py  fetch_model_release.py  fleet_support_agent_demo.py  inspect_debug_queues.py  monitor_flow.py  play_workflow.py  push_multi_truck_scoring_seed.py  push_smoothness_to_buffer.py  reset_db.py  run-ci.ps1  scoring_e2e_docker.ps1  scoring_test_data.py  seed.py  seed_data.py  seed_sentiment_event.py  seed_telemetry_batch.py  seed_test_event.py  send_complete_trips.py  send_telemetry.py  setup_db.py  test_flow.py  trace_ingestion.py  verify_counts.py  verify_scoring_agent_cache.py
backend/security/: README.md  intent_gate.py  pii.py
backend/tasks/: README.md  __init__.py  safety_tasks.py  scoring_tasks.py  sentiment_tasks.py  support_tasks.py  watchdog_tasks.py
backend/tests/: __init__.py  conftest.py  test_agents.py  test_schemas.py
backend/tests/AIF360/: README.md  test_fairness_audit_contract.py
backend/tests/LIME/: README.md  test_text_anchor_explainability.py
backend/tests/Promptfoo/: README.md  test_prompt_safety_contract.py  test_promptfoo_50_case_scale.py
backend/tests/SHAP/: README.md  test_scoring_explainability_contract.py
backend/tests/agents/: test_base_agent.py  test_llm_base_agent.py  test_orchestrator_dispatch.py  test_orchestrator_event_routing.py  test_scoring_features.py  test_sentiment_analysis.py  test_support_safety_tools_contract.py
backend/tests/common/: test_agent_flow_service.py  test_cache_reader.py  test_models.py  test_redis_client.py  test_redis_encoder.py
backend/tests/core/: test_transformer.py  (+10 more)
(+496 files in other folders)
