[project]
name = "ai-agents"
version = "0.1.0"
description = "TraceData AI Middleware"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.0",
    "google-generativeai==0.4.1",
    "httpx==0.27.0",
    "langgraph==0.0.26",
    "psycopg2-binary==2.9.9",
    "pydantic==2.6.3",
    "pydantic-settings==2.2.1",
    "pytest==8.1.1",
    "pytest-asyncio==0.23.5",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.28",
    "uvicorn==0.27.1",
    "ruff==0.3.2",
    "mypy==1.9.0",
    "pytest-cov==4.1.0",
    "structlog==24.1.0",
]

[tool.uv]
managed = true
package = false
