[project]
name = "backend"
version = "0.1.0"
description = "TraceData AI Middleware"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "google-generativeai==0.4.1",
    "httpx==0.27.2",
    "langgraph==0.0.26",
    "psycopg2-binary==2.9.10",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "pytest==8.1.1",
    "pytest-asyncio==0.23.5",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.35",
    "uvicorn==0.27.1",
    "ruff==0.3.2",
    "mypy==1.9.0",
    "pytest-cov==4.1.0",
    "structlog==24.1.0",
    "celery==5.4.0",
    "redis==5.0.8",
]

[tool.uv]
managed = true
package = false
