[project]
name = "tracedata-backend"
version = "0.1.0"
description = "TraceData AI Middleware — FastAPI REST API + LangGraph Agents"
requires-python = ">=3.11"

# ─── Runtime Dependencies ─────────────────────────────────────────────────────
# Pin major versions; use `uv add <pkg>` to add new deps (never edit manually).
dependencies = [
    # Web framework — Swagger UI is bundled at /docs, ReDoc at /redoc
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Database — async SQLAlchemy 2.0 + asyncpg driver for PostgreSQL
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "greenlet>=3.1.1",          # Required by SQLAlchemy async internals

    # Schema migration
    "alembic>=1.14.0",

    # Data validation & settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Environment variables
    "python-dotenv>=1.0.1",

    # Redis client
    "redis[hiredis]>=5.2.0",
]

[project.optional-dependencies]
# Install with: uv add --optional dev <pkg>  OR  uv sync --extra dev
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",          # Coverage plugin used by CI --cov flag
    "httpx>=0.28.0",              # Async test client for FastAPI
    "fakeredis>=2.26.0",          # In-memory Redis for unit tests (no Docker)
    "black>=24.0.0",              # Formatter
    "ruff>=0.8.0",               # Linter (industry standard)
    "bandit>=1.7.0",             # Security SAST
    "mypy>=1.13.0",               # Static type checker
    "types-PyYAML>=6.0.0",        # Stubs for PyYAML (needed by logging.py)
]

# ─── Build System (required by uv / PEP 517) ─────────────────────────────────
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tell hatchling which package to include in the wheel
[tool.hatch.build.targets.wheel]
packages = ["api", "agents", "core"]

# ─── Tool Config ─────────────────────────────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
# Enable auto-fix by default
fix = true

[tool.ruff.lint]
# E501: ignore line length (Black handles it)
# S101: allow assert in tests (project preference)
# B008: allow function calls in argument defaults (common in FastAPI)
ignore = ["E501", "S101", "B008"]
select = [
    "E",   # Pycodestyle errors
    "F",   # Pyflakes
    "I",   # Import sorting (handled by Ruff's isort)
    "B",   # Bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "fakeredis>=2.34.1",
]
