[project]
name = "learning-swe5008-archaas"
version = "0.1.0"
description = "Starter workspace for agentic AI with LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.50",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7.0",
  "pytest>=8.3.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
